--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,7 @@ jobs:
                 make install
         - name: Test with pytest
             run:|
+                pip install pytest
+                pytest
+            run:|
                 make test
