--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ jobs:
     build:
         runs-on: ubuntu-last
         steps:
-        - uses: actions/cheickout@v2
+        - uses: actions/checkout@v2
         - name: Set Up Python 3.12.1
           uses: actions/setup-python@v1
           with:
