--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,11 +5,11 @@ jobs:
         runs-on: ubuntu-last
         steps:
         - uses: actions/checkout@v2
-        - name: Set Up     Python 3.8
+        - name: Set Up Python 3.x
           uses: actions/setup-python@v1
           with:
-            python-version : 3.8
-        - name: install dependencies
+            python-version : 3.x
+        - name: Install dependencies
             run:|
                 make install
         - name: Test with pytest
