--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,23 @@
-name: Python application test Github Actions
+name: Python application
+
 on: [push]
+
 jobs:
-    build:
-        runs-on: ubuntu-last
-        steps:
-        - uses: actions/checkout@v2
-        - name: Set Up Python 3.x
-          uses: actions/setup-python@v1
-          with:
-            python-version : 3.x
-        - name: Install dependencies
-            run:|
-                make install
-        - name: Test with pytest
-            run:|
-                make test
+  build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.x
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.x
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pipenv
+        pipenv install --dev
+    - name: Test with pytest
+      run: |
+        pytest
